# event-manager-platform

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.firebase/: hosting.ZGlzdC9hcHBzL2V2ZW50LW1hbmFnZXItd2ViLWNsaWVudA.cache
.github/workflows/: pull-request.yaml
apps/event-manager-api/: jest.config.js  project.json
apps/event-manager-api/.thunder-client/: qr-data-example.json  thunder-collection_Solana - Disco.json
apps/event-manager-api/src/: main.ts  package.json
apps/event-manager-program/: Anchor.toml  README.md  project.json
apps/event-manager-program/programs/event-manager/: Cargo.toml
apps/event-manager-program/programs/event-manager/src/: errors.rs  lib.rs  utils.rs
apps/event-manager-program/programs/event-manager/src/collections/: event.rs  mod.rs  wearable.rs
apps/event-manager-program/programs/event-manager/src/instructions/event/: buy_tickets.rs  check_in.rs  create_event.rs  mod.rs  purchase.rs  recharge.rs
apps/event-manager-program/tests/: event-manager.spec.ts
apps/event-manager-web-client/: .eslintrc.json  jest.config.js  project.json  tailwind.config.js  webpack.config.js
apps/event-manager-web-client-e2e/: cypress.json  project.json
functions/: package.json  tsconfig.json
functions/src/: index.ts
libs/event-manager-certifiers/: README.md  jest.config.js  project.json
libs/event-manager-generator/: README.md  jest.config.js  project.json
libs/event-manager-utils/: README.md  jest.config.js  project.json
(+196 files in other folders)
